syntax = "proto3";
package proto;
option go_package = ".;proto";
import "msgenum.proto";

message Response {
  int32 seqId = 1; //消息的编号
  RESULT_TYPE result = 2; //返回结果
  EntityInfoChangeResponse entityChangeResponse = 3;
  EnterGameResponse enterGameResponse = 4;
  HeartBeatResponse heartBeatResponse = 5;
  HeroQuitResponse heroQuitResponse = 6;
}

message EnterGameResponse {
  bool changeResult = 1; //结果是否有效
  int32 heroId = 2; //玩家ID
}

message EntityInfoChangeResponse {
  bool changeResult = 1; //改变结果是否有效
}

message HeroQuitResponse { //玩家退出通知
  bool quitResult = 1;
}

message HeartBeatResponse { // 心跳回包
  int64 sendTime = 1; //消息发送时间，用于测试网络时延
}

